[package]
name = "todos"
authors = ["Ethan Zhang <ezsland05@gmail.com>"]
description = "A simple CLI todo-list app"
homepage = "https://github.com/edzdez/todos"
repository = "https://github.com/edzdez/todos"
keywords = ["cli"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
structopt = "0.3.25"
dirs = "4.0.0"
